@@ -25,6 +25,8 @@ BUG FIXES:
 +Add missing keywords for DOS Batch scripts
 +Ensure text that is folded becomes visible when searching for it
 +Save All action now properly updates tab status
++Replace All failing when begining of buffer matches search pattern.
++Replace All with Up flag set causing error to be raised
 
 #-----------------------------------------------------------------------------#
 
